# api-playground

./: .dockerignore  APIDOC.md  Dockerfile  LICENSE  README.md  compose.yml  main.py  pyproject.toml
api/: datatypes.py  doc.py  main.py  restful.py  websocket.py
clients/: README.md  pyproject.toml  restful_client.py  websocket_client.py
